--- a/src/juicy-border-picker.html
+++ b/src/juicy-border-picker.html
@@ -1,86 +1,86 @@
 <link rel="import" href="../../polymer/polymer.html" />
 <link rel="import" href="../../juicy-color-picker/src/juicy-color-picker.html" />
 
-<polymer-element name="juicy-border-picker" attributes="pallete value">
+<dom-module id="juicy-border-picker">
+    <style>
+        ul {
+            border: none;
+            padding: 0px;
+            margin: 0px;
+            list-style-type: none;
+            margin: 5px 0px;
+        }
+
+        ul li {
+        }
+
+        ul li:hover {
+            background-color: #F0F0F0;
+        }
+
+        ul li.selected {
+            background-color: #F1F1F1;
+        }
+
+        ul li a {
+            display: block;
+            padding: 10px 0px;
+        }
+
+        ul li a span {
+            display: block;
+            border-color: #444444;
+            border-bottom-width: 4px;
+        }
+
+        input, select {
+            height: 25px;
+            min-width: 25px;
+            width: 100%;
+            box-sizing: border-box;
+            display: block;
+            white-space: nowrap;
+            box-sizing: border-box;
+            border-radius: 1px;
+            border: none;
+            margin: 0px;
+            padding: 0px 4px;
+            font-size: 12px;
+            border: 1px solid #C0C0C0;
+        }
+
+        input.width {
+            width: 60%;
+            float: left;
+        }
+
+        select.width {
+            width: 40%;
+            float: left;
+        }
+
+        div.width {
+            overflow: auto;
+        }
+
+        div.value {
+            margin-top: 10px;
+            overflow: auto;
+        }
+
+        div.value input {
+            width: calc(100% - 25px);
+            float: left;
+        }
+
+        div.value button {
+            height: 25px;
+            width: 22px;
+            float: left;
+            margin-left: 3px;
+        }
+    </style>
     <template>
-        <style>
-            ul {
-                border: none;
-                padding: 0px;
-                margin: 0px;
-                list-style-type: none;
-                margin: 5px 0px;
-            }
-
-            ul li {
-            }
-
-            ul li:hover {
-                background-color: #F0F0F0;
-            }
-
-            ul li.selected {
-                background-color: #F1F1F1;
-            }
-
-            ul li a {
-                display: block;
-                padding: 10px 0px;
-            }
-
-            ul li a span {
-                display: block;
-                border-color: #444444;
-                border-bottom-width: 4px;
-            }
-
-            input, select {
-                height: 25px;
-                min-width: 25px;
-                width: 100%;
-                box-sizing: border-box;
-                display: block;
-                white-space: nowrap;
-                box-sizing: border-box;
-                border-radius: 1px;
-                border: none;
-                margin: 0px;
-                padding: 0px 4px;
-                font-size: 12px;
-                border: 1px solid #C0C0C0;
-            }
-
-            input.width {
-                width: 60%;
-                float: left;
-            }
-
-            select.width {
-                width: 40%;
-                float: left;
-            }
-
-            div.width {
-                overflow: auto;
-            }
-
-            div.value {
-                margin-top: 10px;
-                overflow: auto;
-            }
-
-            div.value input {
-                width: calc(100% - 25px);
-                float: left;
-            }
-
-            div.value button {
-                height: 25px;
-                width: 22px;
-                float: left;
-                margin-left: 3px;
-            }
-        </style>
         <div class="container">
             <div class="width">
                 <input type="text" value="{{borderWidth}}" class="width" />
@@ -116,13 +116,39 @@
         </div>
     </template>
     <script>
-        Polymer('juicy-border-picker', {
+        Polymer({
+            is: "juicy-border-picker",
             borderStyles: ["solid", "dashed", "dotted", "double"],
-            borderStyle: null,
-            borderWidth: 0,
-            borderWidthUnit: "px",
-            borderColor: null,
             inParse: false,
+            properties: {
+                pallete: {
+                    type: String
+                },
+                value: {
+                    type: String,
+                    observer: "valueChanged"
+                },
+                borderStyle: {
+                    type: String,
+                    value: null,
+                    observer: "borderStyleChanged"
+                },
+                borderWidth: {
+                    type: Number,
+                    value: 0,
+                    observer: "borderWidthChanged"
+                },
+                borderWidthUnit: {
+                    type: String,
+                    value: "px",
+                    observer: "borderWidthUnitChanged"
+                },
+                borderColor: {
+                    type: String,
+                    value: null,
+                    observer: "borderColorChanged"
+                }
+            },
             ready: function () {
             },
             resetInParse: function () {
@@ -193,7 +219,7 @@
             borderWidthUnitChanged: function () {
                 this.refreshValue();
             },
-            borderColorChanger: function () {
+            borderColorChanged: function () {
                 this.refreshValue();
             },
             applyStyle: function (e) {
@@ -206,4 +232,4 @@
             }
         });
     </script>
-</polymer-element>
+</dom-module>
